<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/main_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/colorAccent">

    <LinearLayout
        android:id="@+id/Linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/equa_bg"

        app:layout_constraintBottom_toTopOf="@+id/editTimer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/score"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="40dp"
            android:layout_weight="2"
            android:padding="10dp"
            android:text="@string/score"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/equation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_weight="3"
            android:layout_gravity="fill_vertical"
            android:paddingLeft="5dp"
            android:paddingTop="10dp"
            android:paddingRight="5dp"
            android:paddingBottom="10dp"
            android:text="@string/equa"
            android:textSize="25sp"
            app:layout_constraintEnd_toStartOf="@+id/score"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toEndOf="@+id/timer_text"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/timer_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:layout_weight="2"
            android:padding="1dp"
            android:text="@string/initial"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </LinearLayout>

    <Button
        android:id="@+id/newGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:background="@android:color/transparent"
        android:text="@string/newGame"
        android:textSize="40sp"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/grid_layout" />


    <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="130dp"
        android:background="@android:color/transparent"
        android:text="@string/go30"
        android:textSize="40sp"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/grid_layout"
        app:layout_constraintEnd_toEndOf="@+id/grid_layout"
        app:layout_constraintStart_toStartOf="@+id/grid_layout"
        app:layout_constraintTop_toBottomOf="@+id/newGame" />

    <GridLayout
        android:id="@+id/grid_layout"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:layout_marginBottom="35dp"
        android:columnCount="2"
        android:orientation="horizontal"
        android:rowCount="2"
        android:tag="g_1"
        app:layout_constraintBottom_toTopOf="@+id/exit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTimer">


        <Button

            android:id="@+id/answer_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_margin="20dp"
            android:background="@android:color/holo_blue_dark"
            android:text="answer1" />

        <Button
            android:id="@+id/answer_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_margin="20dp"
            android:background="@android:color/holo_red_light"
            android:text="answer2" />

        <Button
            android:id="@+id/answer_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_margin="20dp"
            android:background="#8BC34A"
            android:text="answer3" />

        <Button
            android:id="@+id/answer_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_margin="20dp"
            android:background="#FFEB3B"
            android:text="answer4" />

    </GridLayout>

    <Button
        android:id="@+id/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:background="@android:color/transparent"
        android:onClick="exit"
        android:text="@string/exit"
        android:textColor="@android:color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grid_layout" />

    <EditText
        android:id="@+id/editTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="1dp"
        android:ems="10"
        android:hint="Enter Time"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/grid_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Linear" />

</androidx.constraintlayout.widget.ConstraintLayout>